--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,14 @@
     <title>Learning Tailwind CSS</title>
     <link rel="stylesheet" href="output.css">
 </head>
-<body class="bg-red-600">
-    <h1>Welcome to abroad...</h1>
+<body class="bg-orange-500 h-screen flex items-center justify-center">
+    <div class="text-center bg-white p-8 rounded-lg shadow-lg justify-center align-middle">
+        <h1 class="text-3xl font-bold mb-4">Hello, World!</h1>
+        <p class="text-lg mb-6">Learn a new software engineering concept every week. Highly relevant for software engineers and aspiring software engineers.</p>
+        <form class="flex items-center justify-center">
+            <input type="email" placeholder="Email only" class="border border-gray-300 rounded-l-lg px-4 py-2 w-64 focus:outline-none focus:ring-2 focus:ring-blue-500">
+            <button type="button" class="bg-blue-500 text-white px-6 py-2 rounded-r-lg hover:bg-blue-600">SUBSCRIBE</button>
+        </form>
+    </div>
 </body>
 </html>
