--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./mystyle.css">
     <script src="https://kit.fontawesome.com/415161d9d1.js" crossorigin="anonymous"></script>
     <title>Manish Patel - Portfolio Website</title>
 </head>
