--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
             <a href="mailto:maneeshkurmii@gmail.com"><i class="fa-solid fa-envelope"></i></a>
         </div>
     </section>
-    <script src="./script.js"></script>
+    <script src="./myscript.js"></script>
 </body>
 
 </html>
